# Alteração dos relatório de parcelas quitadas e ajuste na criação da movimentação bancária ao quitar parcelas para enviar a Obs exibida na quitação.

--- a/Glass/Relatorios/rptParcCartaoQuitadas.rdlc
+++ b/Glass/Relatorios/rptParcCartaoQuitadas.rdlc
@@ -96,22 +96,25 @@
               <Width>2.27776cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.40463cm</Width>
+              <Width>4.01859cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.59593cm</Width>
+              <Width>2.74926cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.59593cm</Width>
+              <Width>2.88155cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.70895cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.94856cm</Width>
+              <Width>1.81627cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.07935cm</Width>
+              <Width>1.84123cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>2.40347cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -336,6 +339,40 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox25</rd:DefaultName>
+                      <Style>
+                        <TopBorder>
+                          <Style>Solid</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Style>Solid</Style>
+                        </BottomBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox28">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Obs.</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox28</rd:DefaultName>
                       <Style>
                         <TopBorder>
                           <Style>Solid</Style>
@@ -621,6 +658,43 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Obs">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!Obs.Value</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Obs</rd:DefaultName>
+                      <Style>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Style>None</Style>
+                        </BottomBorder>
+                        <BackgroundColor>=IIf((RowNumber(Nothing) Mod 2 = 0),"White", "#EFF3FB")</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
@@ -821,12 +895,41 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox30">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox30</rd:DefaultName>
+                      <Style>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
           </TablixRows>
         </TablixBody>
         <TablixColumnHierarchy>
           <TablixMembers>
+            <TablixMember />
             <TablixMember />
             <TablixMember />
             <TablixMember />
@@ -864,7 +967,7 @@
         <Top>3.2822cm</Top>
         <Left>0.25cm</Left>
         <Height>2.02868cm</Height>
-        <Width>19.61111cm</Width>
+        <Width>19.69709cm</Width>
         <ZIndex>3</ZIndex>
         <DataElementOutput>NoOutput</DataElementOutput>
         <Style />
