--- a/Glass/Vue/Estoques/Templates/LstEstoques.Filtro.html
+++ b/Glass/Vue/Estoques/Templates/LstEstoques.Filtro.html
@@ -40,7 +40,7 @@
         <span class="form-group">
             <label>Subgrupo</label>
             <lista-selecao-id-valor v-bind:item-selecionado.sync="subgrupoProdutoAtual" texto-selecionar="Todos" v-bind:funcao-recuperar-itens="obterItensFiltroSubgruposProduto"
-                v-bind:ordenar="false"></lista-selecao-id-valor>
+                v-bind:ordenar="false" v-bind:filtro-recuperar-itens="filtroSubgruposProduto"></lista-selecao-id-valor>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
         <span class="form-group">
