--- a/Glass/Vue/Pedidos/Templates/CadPedido.Ambientes.html
+++ b/Glass/Vue/Pedidos/Templates/CadPedido.Ambientes.html
@@ -144,7 +144,7 @@
                     </span>
                 </td>
                 <td>
-                    <log-alteracao tabela="AmbientePedido" v-bind:id-item="item.id" v-bind:atualizar-ao-alterar="false" v-if="item.permissoes.logAlteracoes"></log-alteracao>
+                    <log-alteracao tabela="AmbientePedido" v-bind:id-item="item.id" v-bind:atualizar-ao-alterar="false" v-if="item.permissoes && item.permissoes.logAlteracoes"></log-alteracao>
                 </td>
             </template>
             <template slot="itemEditando">
