--- a/Glass/Vue/Pedidos/Templates/LstPedidos.Filtro.html
+++ b/Glass/Vue/Pedidos/Templates/LstPedidos.Filtro.html
@@ -32,7 +32,7 @@
     <div>
         <span class="form-group">
             <label for="situacao">Situação</label>
-            <lista-selecao-id-valor v-bind:item-selecionado.sync="situacaoAtual" texto-selecionar="Todas" v-bind:funcao-recuperar-itens="obterItensFiltroSituacoesPedido"
+            <lista-selecao-id-valor v-bind:item-selecionado.sync="situacaoAtual" v-bind:funcao-recuperar-itens="obterItensFiltroSituacoesPedido"
                 v-bind:ordenar="false"></lista-selecao-id-valor>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
@@ -43,7 +43,7 @@
         </span>
         <span class="form-group">
             <label for="situacaoProducao">Situação Prod.</label>
-            <lista-selecao-id-valor v-bind:item-selecionado.sync="situacaoProducaoAtual" texto-selecionar="Todas" v-bind:funcao-recuperar-itens="obterItensFiltroSituacoesProducao"
+            <lista-selecao-id-valor v-bind:item-selecionado.sync="situacaoProducaoAtual" v-bind:funcao-recuperar-itens="obterItensFiltroSituacoesProducao"
                 v-bind:ordenar="false"></lista-selecao-id-valor>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
@@ -56,7 +56,7 @@
         <span class="form-group">
             <label for="fastDelivery">Fast Delivery</label>
             <select v-model="filtroAtual.fastDelivery">
-                <option value="">Todos</option>
+                <option value=""></option>
                 <option value="true">Sim</option>
                 <option value="false">Não</option>
             </select>
@@ -67,7 +67,7 @@
         <span class="form-group">
             <label for="origem">Origem Pedido</label>
             <select id="origem" v-model="filtroAtual.origem">
-                <option value="0">Todos</option>
+                <option value="0"></option>
                 <option value="1">Normal</option>
                 <option value="2">Ecommerce</option>
                 <option value="3">Importado</option>
