#674 Alterações encontradas durante testes da tela

--- a/Glass/Vue/Cheques/Templates/LstCheque.Filtro.html
+++ b/Glass/Vue/Cheques/Templates/LstCheque.Filtro.html
@@ -92,7 +92,7 @@
         <span class="form-group">
             <label>Valor</label>
             <input type="number" v-model.number="filtroAtual.valorChequeInicio" style="width: 60px" />
-            a
+            <label>a</label>
             <input type="number" v-model.number="filtroAtual.valorChequeFim" style="width: 60px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
