#796 Correção de problemas relatados em testes funcionais

--- a/Glass/Vue/Cheques/Templates/LstCheque.Filtro.html
+++ b/Glass/Vue/Cheques/Templates/LstCheque.Filtro.html
@@ -91,9 +91,9 @@
         </span>
         <span class="form-group">
             <label>Valor</label>
-            <input type="number" v-model.number="filtroAtual.valorChequeInicio" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.valorChequeInicio" step="0.01" style="width: 60px" />
             <label>a</label>
-            <input type="number" v-model.number="filtroAtual.valorChequeFim" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.valorChequeFim" step="0.01" style="width: 60px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
         <span class="form-group">
