#796 Refatoração do controle de boletos para separação de responsabilidades
Isolamento dos métodos na API para um controller específico (desvinculação do controller de notas fiscais).

--- a/Glass/Style/GridView.css
+++ b/Glass/Style/GridView.css
@@ -99,11 +99,14 @@
           border-left: none;
         }
 
-    .gridStyle .pgr a {
-      color: #555;
+    .gridStyle .pgr a, .gridStyle .pgr span {
       text-decoration: none;
       font-size: 0.9em;
       text-align: center;
+    }
+
+    .gridStyle .pgr a {
+      color: #555;
     }
 
       .gridStyle .pgr a:hover {
