--- a/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacaoViaEmpresa.rdlc
+++ b/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacaoViaEmpresa.rdlc
@@ -281,6 +281,10 @@
           <DataField>CodCliente</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="PedCliExterno">
+          <DataField>PedCliExterno</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="NomeCli">
           <DataField>NomeCli</DataField>
           <rd:TypeName>System.String</rd:TypeName>
@@ -4067,7 +4071,7 @@ IIf(Len(First(Fields!DadosCancelamento.Value, "LiberarPedido")) &gt; 0, vbCrLf +
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!CodCliente.Value</Value>
+                                  <Value>=Fields!CodCliente.Value + "-" + Fields!PedCliExterno.Value</Value>
                                   <Style>
                                     <FontSize>9pt</FontSize>
                                   </Style>
